@@ -10,6 +10,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class ContactService {
@@ -25,7 +26,7 @@ public class ContactService {
         return repo.getAll()
                 .stream()
                 .map(c -> objectMapper.convertValue(c, ContactDTO.class))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public ContactDTO get(Integer id) throws BusinessRuleException {
@@ -37,7 +38,7 @@ public class ContactService {
         return repo.getByPerson(id)
                 .stream()
                 .map(c -> objectMapper.convertValue(c, ContactDTO.class))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public ContactDTO add(Integer id, ContactCreateDTO object) throws BusinessRuleException {
